# esp32-agent-test

./: .gitignore  CMakeLists.txt  README.MD  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  config.h  gpio_ctrl.c  gpio_ctrl.h  idf_component.yml  main.c  neopixel.c  neopixel.h  openai_api.c  openai_api.h  secrets.example.h  secrets.h  web_server.c  web_server.h
main/spiffs/: index.html
